--- a/index.html.html
+++ b/index.html.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Support Company</title>
+    <title>AI Ready DATA</title>
     <style>
         body {
             font-family: Arial, sans-serif;
